fixed alignment

--- a/src/styles/movieListStyle.css
+++ b/src/styles/movieListStyle.css
@@ -7,3 +7,8 @@
 .movieSection > img{
     width: 30vw;
 }
+
+.leftAdjust {
+    align-self: flex-start;
+    margin-left: 5vw;
+}
